# AI-Stuff

./: .gitignore  README.md
.claude-plugin/: marketplace.json
.github/workflows/: browser-capture-tests.yml
.planning/: REQUIREMENTS.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/research/: PITFALLS.md  STACK.md  SUMMARY.md
agents/: chris-coyier.md  evan-you.md  rich-harris.md  wes-bos.md
codex-session-export/: README.md  SKILL.md
codex-session-export/agents/: openai.yaml
codex-session-export/scripts/: codex_session_export.py
omarchy-theme/: .gitignore  README.md
omarchy-theme/.claude-plugin/: plugin.json
omarchy-theme/agents/: theme-generator.md
omarchy-theme/commands/: theme-create.md  theme-finalize.md
omarchy-theme/hooks/: check-dependencies.sh  hooks.json  validate-theme-path.sh
omarchy-theme/scripts/: setup.sh
persona/: .gitignore  CLAUDE.md  README.md
persona-reviews/: sample-dhh.json  sample-theprimeagen.json
persona/.claude-plugin/: plugin.json
persona/.planning/: MILESTONES.md  PROJECT.md  config.json
persona/agents/: chris-coyier.md  dan-abramov.md  dhh.md  evan-you.md  kent-c-dodds.md  lee-robinson.md  matt-mullenweg.md  matt-pocock.md  rich-harris.md  scott-tolinski.md  tanner-linsley.md  template.md  theo-browne.md  theprimeagen.md  wes-bos.md
recon-wrapper/: README.md  openapi.yaml  pyproject.toml
recon-wrapper/src/recon_wrapper/: __init__.py  __main__.py  actions.py  aggregator.py  config.py  models.py  server.py  watcher.py
recon-wrapper/tests/: test_aggregator.py
(+104 files in other folders)
